src/objects/Tipo_de_documento__c.object
<CustomObject>
    <description>Entidad necesaria para el registro de tipos de documentos</description>
    <fields>
        <fullName>DOC_CAS_Estado_Documento__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indica si el documento aplica o no</description>
        <label>Documento imprescindible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOC_CAS_Validez__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si el Documento tiene fecha de vigencia o no</description>
        <label>Caducidad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOC_DAT_Fecha_Inicio_Vigencia__c</fullName>
        <description>Fecha en la que el documento comienza a ser vigente</description>
        <label>Fecha de Inicio Vigencia</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOC_NUM_Dias_para_Baja__c</fullName>
        <description>Número de días en el que se dará de baja temporal a la cuenta de Profesional Contrato, tras haber vencido el Documento.</description>
        <label>Dias para Baja tras Vencimiento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOC_SEL_Gremio__c</fullName>
        <description>Gremio específico al que aplica el documento, si procede</description>
        <label>Gremio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOC_SEL_Tipo_de_Profesional__c</fullName>
        <description>Indica los diferentes tipos de Profesionales a los que aplica el documento</description>
        <label>Tipo de Profesional</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_de_Profesional</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOC_TXT_Identificador__c</fullName>
        <description>Id externo del Documento</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOC_TXT_Texto_Email_Baja__c</fullName>
        <label>Texto Email Baja</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOC_TXT_Texto_Email__c</fullName>
        <description>Campo tipo texto para la configuración de los e-mail de notificación del profesional 30 días antes de la fecha de vencimiento de un documento.</description>
        <label>Texto Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Tipo de Documento</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DOC_TXT_Identificador__c</columns>
        <columns>NAME</columns>
        <columns>DOC_SEL_Gremio__c</columns>
        <columns>DOC_CAS_Estado_Documento__c</columns>
        <columns>DOC_SEL_Tipo_de_Profesional__c</columns>
        <columns>DOC_DAT_Fecha_Inicio_Vigencia__c</columns>
        <columns>DOC_NUM_Dias_para_Baja__c</columns>
        <columns>DOC_CAS_Validez__c</columns>
        <columns>DOC_TXT_Texto_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Tipo de Documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipos de Documento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>